[metadata]
name = data_tools
url = https://github.com/user/data_tools
license = Proprietary
author = User 1
author_email = email@email.com
maintainer = 
    User 1
maintainer_email = 
    email@email.com
description = A set of modules used to division location and unit data
long_description = file: README.md
long_description_content_type = text/x-md
classifiers =
    Development Status :: 2 - Beta
    Environment :: CLI
    Framework :: Data Tools
    Intended Audience :: Companies
    License :: Proprietary
    Operating System :: Windows
    Programming Language :: Python


[options]
package_dir=
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools

[options.packages.find]
where = src

[tool:isort]
profile=black
lines_between_types=1
combine_as_imports=True
known_first_party=warehouse,tests

[coverage:run]
branch = True
source =
    src

[coverage:paths]
source =
    src
    */site-packages